@@ -1,6 +1,9 @@
 Entries are sorted chronologically from oldest to youngest within each release,
 releases are sorted from youngest to oldest.
 
+version <next>:
+- setts bitstream filter
+
 version 4.3.2:
  avcodec/hapdec: Change compressed_offset to unsigned 32bit
  avformat/rmdec: Check codec_length without overflow
